--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@feathersjs/client": "^3.6.0",
     "@material-ui/core": "^3.0.2",
     "@material-ui/icons": "^3.0.1",
+    "moment": "^2.22.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5",
